Finished creating a Happy Birthday in App card. It's good to look into color scheme fundamentals as well. https://color.adobe.com

--- a/Hello_World/app/src/main/res/values/strings.xml
+++ b/Hello_World/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Hello World</string>
+    <string name="from_robert_wong">From, Robert Wong</string>
+    <string name="this_is_a_happy_birthday_card">This is a happy birthday card</string>
+    <string name="to_birthday_person">To, Birthday Person</string>
 </resources>
