Finished with the card, low-Q copy and pasta but it's something. I want to take a class on visual and app design. Seems very useful. PC LilyPichu (I ain't no thief)

--- a/Hello_World/app/src/main/res/values/strings.xml
+++ b/Hello_World/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="from_robert_wong">From, Robert Wong</string>
     <string name="this_is_a_happy_birthday_card">This is a happy birthday card</string>
     <string name="to_birthday_person">To, Birthday Person</string>
+    <string name="ty_card">Udacity\'s Big League (OC:LilyPichu)</string>
+    <string name="buffer_text">This is a buffer for the text below</string>
+    <string name="thank_text">It is time to be Grateful</string>
+    <string name="end_credits">HOLD</string>
 </resources>
