--- a/Hello_World/app/src/main/res/values/strings.xml
+++ b/Hello_World/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="ty_card">Udacity\'s Big League (OC:LilyPichu)</string>
     <string name="buffer_text">This is a buffer for the text below</string>
     <string name="thank_text">It is time to be Grateful</string>
-    <string name="end_credits">HOLD</string>
+    <string name="end_credits">Life is good,\njust like you!</string>
 </resources>
