--- a/HelloAndroid/app/src/main/res/values/strings.xml
+++ b/HelloAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">HelloAndroid</string>
+    <string name="Udacity">Udacity</string>
+    <string name="Address">2465 Latham St</string>
+    <string name="City">Mountain View, CA 94043</string>
+    <string name="Phone">650-555-5555</string>
 </resources>
