--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Just Java</string>
-    <string name="quantity">QUANTITY!</string>
+    <string name="quantity">QUANTITY</string>
     <string name="order">ORDER</string>
     <string name="amt">2</string>
     <string name="price">$10</string>
